<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dark_gray">
    <ScrollView
	    android:id="@+id/scroll_console_terminal"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:fadeScrollbars="false"
	    android:padding="10dip"
	    android:layout_weight="1"
	    android:background="@android:color/black">
        <TextView
            android:id="@+id/console_terminal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@android:color/white"/>
    </ScrollView>
    <ImageView
            android:id="@+id/separator"
            android:layout_height="1dip"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:layout_marginBottom="5dip"
            android:background="@android:color/background_light"/>
    <LinearLayout
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="40dip"
       android:paddingLeft="5dip"
       android:paddingRight="5dip"
       android:layout_marginTop="5dip"
       android:layout_margin="0dip"
       android:background="@color/dark_gray">
       <ImageButton
            android:id="@+id/connect_button"
            android:layout_height="wrap_content"
            android:layout_width="50dip"
            android:scaleType="centerInside"
            android:background="@android:drawable/btn_default_small"
            android:src="@drawable/port_disconnected"/>
       <ImageButton
            android:id="@+id/clear_console_button"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_delete"
            android:background="@android:drawable/btn_default_small"
            android:onClick="clearConsole"/>
       <ImageButton
            android:id="@+id/settings_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_manage"
            android:background="@android:drawable/btn_default_small"
            android:onClick="openPreferencesActivity"/>
       <EditText
            android:id="@+id/input_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/text_send"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:lines="1"
            android:layout_weight="1"
            android:textSize="15dip"
            android:layout_gravity="center"
            android:background="@android:drawable/editbox_background"/>
       <ImageButton
            android:id="@+id/clear_send_text_button"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_input_delete"
            android:background="@android:drawable/btn_default_small"
            android:onClick="clearInputText"/>
       <Button
            android:id="@+id/send_terminal_button"
            android:layout_height="fill_parent"
            android:layout_width="80dip"
            android:layout_gravity="center"
            android:text="@string/send_terminal"
            android:background="@android:drawable/btn_default_small"
            android:onClick="writeData"
            android:enabled="false"/>
    </LinearLayout>
    <LinearLayout
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="20dip"
       android:paddingLeft="5dip"
       android:paddingRight="5dip"
       android:layout_margin="0dip"
       android:background="@color/dark_gray">
       <TextView
       		android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:textSize="13dip"
            android:text="@string/serial_console_status"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
       <TextView
       		android:id="@+id/status_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:textSize="13dip"
            android:text="@string/initial_status"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>
